# A list of applications
ADD_SUBDIRECTORY(viewer)
ADD_SUBDIRECTORY(forwardSim)
ADD_SUBDIRECTORY(cubes)
ADD_SUBDIRECTORY(motionAnalysis)
ADD_SUBDIRECTORY(pdController)
ADD_SUBDIRECTORY(balance)
ADD_SUBDIRECTORY(ik)
ADD_SUBDIRECTORY(hybrid)
ADD_SUBDIRECTORY(closedLoop)
ADD_SUBDIRECTORY(hanging)
ADD_SUBDIRECTORY(holding)
ADD_SUBDIRECTORY(interacting)
ADD_SUBDIRECTORY(loadModel)
 ADD_SUBDIRECTORY(forwardSim_world)
ADD_SUBDIRECTORY(cubes_world)
ADD_SUBDIRECTORY(balance_world)
